Implement GlowScript widgets: button, radio, checkbox, slider, menu

--- a/Demos/ButtonsSlidersMenus1.ipynb
+++ b/Demos/ButtonsSlidersMenus1.ipynb
@@ -6,16 +6,104 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/jquery-ui.custom.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/glow.2.1a.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/glow.2.1b.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/glowcomm\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"nbextensions/glowcomm\"], function(){console.log(\"glowcomm loaded\");})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"glowscript\" class=\"glowscript\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import ipywidgets as wd\n",
     "from vpython import *\n",
-    "\n",
-    "# For some reason, this program that uses widgets sometimes doesn't make the 3D display without a restart\n",
-    "\n",
-    "# This is an experiment in using Jupyter widgets (button, slider, menu).\n",
-    "# Compare with the similar program in the Example programs at glowscript.org.\n",
-    "# Ideally, we would like to use the same widget statements in both GlowScript and Jupyter VPython.\n",
+    "# This version uses Jupyter notebook widgets: button, slider, menu\n",
+    "# See ButtonsSlidersMenus2 for a version that uses GlowScript button, slider, menu, radio button, checkbox\n",
     "\n",
     "scene.width = 350\n",
     "scene.height = 300\n",
@@ -84,6 +172,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
