--- a/Demos/Color-RGB-HSV1.ipynb
+++ b/Demos/Color-RGB-HSV1.ipynb
@@ -93,40 +93,60 @@
     }
    ],
    "source": [
+    "import ipywidgets as wd\n",
     "from vpython import *\n",
-    "# John Coady\n",
+    "# This version uses Jupyter notebook slider\n",
+    "# See Color-RGB-HSV2 for a version that uses GlowScript slider\n",
     "\n",
-    "#scene.title = \"Mouse Drag\"\n",
-    "#scene.caption = \"\"\"Click and drag mouse in 3D window to insert small sphere.\"\"\"\n",
+    "scene.userzoom = False\n",
+    "scene.userspin = False\n",
+    "scene.width = 400\n",
+    "scene.height = 200\n",
+    "scene.range = 1\n",
+    "box(pos=vector(10,0,0)) # Force creation of canvas; box is not seen because it is outside the canvas\n",
+    "scene.caption = 'You can Ctrl-C copy the RGB and HSV values shown above.'\n",
     "\n",
-    "scene.range = 3\n",
+    "C = ['Red', 'Green', 'Blue', 'Hue', 'Saturation', 'Value']\n",
+    "sliders = []\n",
+    "lastvalues = []\n",
+    "adjusting = False\n",
     "\n",
-    "b = box(pos=vector(0,0,0), color=color.green)\n",
+    "def set_background(change):\n",
+    "    global adjusting\n",
+    "    if adjusting: return # in the process of resetting various slider values\n",
+    "    s = []\n",
+    "    N = -1\n",
+    "    for i in range(6): # Get values for all 6 sliders\n",
+    "        val = sliders[i].value\n",
+    "        s.append(val)\n",
+    "        if val != lastvalues[i]:\n",
+    "            N = i\n",
+    "            lastvalues[i] = val\n",
+    "    adjusting = True # prevent circular updating of slider values\n",
+    "    if N < 3:\n",
+    "        rgb = vector(s[0],s[1],s[2])\n",
+    "        hsv = color.rgb_to_hsv(rgb)\n",
+    "        sliders[3].value = lastvalues[3] = int(1000*hsv.x)/1000 # reset HSV slider positions; display 3 figures\n",
+    "        sliders[4].value = lastvalues[4] = int(1000*hsv.y)/1000\n",
+    "        sliders[5].value = lastvalues[5] = int(1000*hsv.z)/1000\n",
+    "    else:\n",
+    "        hsv = vector(s[3],s[4],s[5])\n",
+    "        rgb = color.hsv_to_rgb(hsv)\n",
+    "        sliders[0].value = lastvalues[0] = int(1000*rgb.x)/1000 # reset RGB slider positions; display 3 figures\n",
+    "        sliders[1].value = lastvalues[1] = int(1000*rgb.y)/1000\n",
+    "        sliders[2].value = lastvalues[2] = int(1000*rgb.z)/1000\n",
+    "    scene.background = rgb\n",
+    "    # For readability, limit precision of display of quantities to 3 figures\n",
+    "    f = \"RGB = <{:1.3f}, {:1.3f}, {:1.3f}>, HSV = <{:1.3f}, {:1.3f}, {:1.3f}>\"\n",
+    "    scene.title = f.format(rgb.x, rgb.y, rgb.z, hsv.x, hsv.y, hsv.z)\n",
+    "    adjusting = False\n",
     "\n",
-    "drag = False\n",
-    "s = None\n",
-    "\n",
-    "def grab(evt):\n",
-    "    global s, drag\n",
-    "    scene.title = 'Drag the sphere'\n",
-    "    if evt.which == 1:\n",
-    "        drag = True\n",
-    "        loc = evt.pos\n",
-    "        s = sphere(pos=loc, radius=0.1, color=color.red)\n",
-    "\n",
-    "def move(evt):\n",
-    "    if drag:\n",
-    "        s.pos = evt.pos\n",
-    "\n",
-    "def drop(evt):\n",
-    "    global drag\n",
-    "    scene.title = 'Mouse Drag'\n",
-    "    s.color = color.cyan\n",
-    "    drag = False\n",
-    "\n",
-    "scene.bind('mousedown',grab)\n",
-    "scene.bind('mousemove',move)\n",
-    "scene.bind('mouseup',drop)"
+    "for i in range(6):\n",
+    "    sliders.append(wd.FloatSlider(description=C[i], min=0, max=1, step=0.001, value=0))\n",
+    "    lastvalues.append(0)\n",
+    "    sliders[i].observe(set_background, names='value') # watch for changes in slider.value\n",
+    "display(wd.VBox(children=sliders)) # stack (default horizontal) sliders vertically\n",
+    "sliders[0].value = 1 # make the background red\n"
    ]
   },
   {
