--- a/Demos/Color-RGB-HSV2.ipynb
+++ b/Demos/Color-RGB-HSV2.ipynb
@@ -22,7 +22,19 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1.min\");"
+       "require.undef(\"nbextensions/glow.2.1a.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/glow.2.1b.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -81,60 +93,49 @@
     }
    ],
    "source": [
-    "import ipywidgets as wd\n",
     "from vpython import *\n",
-    "\n",
-    "# Jupyter version of GlowScript demo program Color-RGB-HSV\n",
+    "# This version uses GlowScript slider\n",
+    "# See ButtonsSlidersMenus1 for a version that uses Jupyter slider\n",
     "\n",
     "scene.userzoom = False\n",
     "scene.userspin = False\n",
     "scene.width = 400\n",
     "scene.height = 200\n",
     "scene.range = 1\n",
+    "scene.background = color.red\n",
     "box(pos=vector(10,0,0)) # Force creation of canvas; box is not seen because it is outside the canvas\n",
-    "scene.caption = 'You can Ctrl-C copy the RGB and HSV values shown above.'\n",
+    "cancopy = 'You can Ctrl-C or Command-C copy these RGB and HSV values:\\n'\n",
+    "scene.title = cancopy\n",
+    "scene.append_to_title(\"RGB = <1.000, 0.000, 0.000>, HSV = <0.000, 0.000, 0.000>\")\n",
     "\n",
     "C = ['Red', 'Green', 'Blue', 'Hue', 'Saturation', 'Value']\n",
     "sliders = []\n",
-    "lastvalues = []\n",
-    "adjusting = False\n",
     "\n",
-    "def set_background(change):\n",
-    "    global adjusting\n",
-    "    if adjusting: return # in the process of resetting various slider values\n",
-    "    s = []\n",
-    "    N = -1\n",
-    "    for i in range(6): # Get values for all 6 sliders\n",
-    "        val = sliders[i].value\n",
-    "        s.append(val)\n",
-    "        if val != lastvalues[i]:\n",
-    "            N = i\n",
-    "            lastvalues[i] = val\n",
-    "    adjusting = True # prevent circular updating of slider values\n",
-    "    if N < 3:\n",
-    "        rgb = vector(s[0],s[1],s[2])\n",
+    "def set_background(sl):\n",
+    "    if sl.id < 3:\n",
+    "        rgb = vector(sliders[0].value, sliders[1].value, sliders[2].value)\n",
     "        hsv = color.rgb_to_hsv(rgb)\n",
-    "        sliders[3].value = lastvalues[3] = int(1000*hsv.x)/1000 # reset HSV slider positions; display 3 figures\n",
-    "        sliders[4].value = lastvalues[4] = int(1000*hsv.y)/1000\n",
-    "        sliders[5].value = lastvalues[5] = int(1000*hsv.z)/1000\n",
+    "        sliders[3].value = int(1000*hsv.x)/1000# reset HSV slider positions; display 3 figures\n",
+    "        sliders[4].value = int(1000*hsv.y)/1000\n",
+    "        sliders[5].value = int(1000*hsv.z)/1000\n",
     "    else:\n",
-    "        hsv = vector(s[3],s[4],s[5])\n",
+    "        hsv = vector(sliders[3].value, sliders[4].value, sliders[5].value)\n",
     "        rgb = color.hsv_to_rgb(hsv)\n",
-    "        sliders[0].value = lastvalues[0] = int(1000*rgb.x)/1000 # reset RGB slider positions; display 3 figures\n",
-    "        sliders[1].value = lastvalues[1] = int(1000*rgb.y)/1000\n",
-    "        sliders[2].value = lastvalues[2] = int(1000*rgb.z)/1000\n",
+    "        sliders[0].value = int(1000*rgb.x)/1000 # reset RGB slider positions; display 3 figures\n",
+    "        sliders[1].value = int(1000*rgb.y)/1000\n",
+    "        sliders[2].value = int(1000*rgb.z)/1000\n",
     "    scene.background = rgb\n",
     "    # For readability, limit precision of display of quantities to 3 figures\n",
     "    f = \"RGB = <{:1.3f}, {:1.3f}, {:1.3f}>, HSV = <{:1.3f}, {:1.3f}, {:1.3f}>\"\n",
-    "    scene.title = f.format(rgb.x, rgb.y, rgb.z, hsv.x, hsv.y, hsv.z)\n",
-    "    adjusting = False\n",
+    "    scene.title = cancopy + f.format(rgb.x, rgb.y, rgb.z, hsv.x, hsv.y, hsv.z)\n",
     "\n",
-    "for i in range(6):\n",
-    "    sliders.append(wd.FloatSlider(description=C[i], min=0, max=1, step=0.001, value=0))\n",
-    "    lastvalues.append(0)\n",
-    "    sliders[i].observe(set_background, names='value') # watch for changes in slider.value\n",
-    "display(wd.VBox(children=sliders)) # stack (default horizontal) sliders vertically\n",
-    "sliders[0].value = 1 # make the background red\n"
+    "scene.caption = '\\n'\n",
+    "for i in range(6): # Create the 3 RGB and 3 HSV sliders\n",
+    "    sliders.append(slider(length=300, left=10, min=0, max=1, bind=set_background, id=i))\n",
+    "    scene.append_to_caption('    '+C[i]+'\\n\\n') # Display slider name\n",
+    "    if i == 2: scene.append_to_caption(\"\\n\\n\") # Separate the RGB and HSV sliders\n",
+    "sliders[0].value = 1 # make the background red\n",
+    "sliders[4].value = sliders[5].value = 1\n"
    ]
   },
   {
@@ -148,6 +149,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
