--- a/Demos/DipoleElectricField.ipynb
+++ b/Demos/DipoleElectricField.ipynb
@@ -46,6 +46,42 @@
     {
      "data": {
       "application/javascript": [
+       "require.undef(\"nbextensions/pako.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/pako_deflate.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/pako_inflate.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
        "require([\"nbextensions/glowcomm\"], function(){console.log(\"glowcomm loaded\");})"
       ],
       "text/plain": [
@@ -117,13 +153,14 @@
     "    a.pos = p\n",
     "    a.axis = scale*f\n",
     "    a.color = vector(red,0,blue)\n",
+    "    a.visible = True\n",
     "\n",
     "drag = False\n",
     "a = None\n",
     "\n",
     "def down(ev):\n",
     "    global a, drag\n",
-    "    a = arrow(shaftwidth=6e-15)\n",
+    "    a = arrow(shaftwidth=6e-15, visible=False)\n",
     "    mouse_to_field(a)\n",
     "    drag = True\n",
     "\n",
