--- a/Demos/DoublePendulum.ipynb
+++ b/Demos/DoublePendulum.ipynb
@@ -22,7 +22,19 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1.min\");"
+       "require.undef(\"nbextensions/glow.2.1a.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/glow.2.1b.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -35,42 +47,6 @@
      "data": {
       "application/javascript": [
        "require.undef(\"nbextensions/glowcomm\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako_deflate.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako_inflate.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -133,10 +109,10 @@
     "scene.title = \"A double pendulum\"\n",
     "\n",
     "def display_instructions():\n",
-    "    s = \"In VPython programs:\\n\\n\"\n",
-    "    s += \"    Rotate the camera by dragging with the right mouse button,\\n        or hold down the Ctrl key and drag.\\n\\n\"\n",
+    "    s = \"In VPython programs:\\n\"\n",
+    "    s += \"    Rotate the camera by dragging with the right mouse button,\\n        or hold down the Ctrl key and drag.\\n\"\n",
     "    s += \"    To zoom, drag with the left+right mouse buttons,\\n         or hold down the Alt/Option key and drag,\\n         or use the mouse wheel.\\n\"\n",
-    "    s += \"\\nTouch screen= pinch/extend to zoom, swipe or two-finger rotate.\"\n",
+    "    s += \"Touch screen: pinch/extend to zoom, swipe or two-finger rotate.\"\n",
     "    scene.caption = s\n",
     "\n",
     "# Display text below the 3D graphics:\n",
@@ -242,6 +218,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
