--- a/Demos/Graphs.ipynb
+++ b/Demos/Graphs.ipynb
@@ -82,6 +82,7 @@
    ],
    "source": [
     "from vpython import *\n",
+    "from numpy import arange as range\n",
     "\n",
     "oscillation = graph(xtitle='time', ytitle='Drag mouse to see value')\n",
     "funct1 = gcurve(color=color.blue, width=4)\n",
@@ -115,6 +116,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
