--- a/Demos/Gyroscope-Suspended.ipynb
+++ b/Demos/Gyroscope-Suspended.ipynb
@@ -2,35 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"scene0\"><div id=\"glowscript\" class=\"glowscript\"></div></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/glow.1.0.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "application/javascript": [
@@ -46,31 +22,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.1.1.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/glow.1.2.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.0.min\");"
+       "require.undef(\"nbextensions/glow.2.1.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -94,6 +46,42 @@
     {
      "data": {
       "application/javascript": [
+       "require.undef(\"nbextensions/pako.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/pako_deflate.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/pako_inflate.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
        "require([\"nbextensions/glowcomm\"], function(){console.log(\"glowcomm loaded\");})"
       ],
       "text/plain": [
@@ -106,7 +94,7 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"<vpython.vpython.canvas object at 0x000001ED70671B70>\"><div id=\"glowscript\" class=\"glowscript\"></div></div>"
+       "<div id=\"glowscript\" class=\"glowscript\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -209,7 +197,7 @@
     "        gyro.axis = -norm(Lrot)\n",
     "    gyro.pos = cm-0.5*Lshaft*gyro.axis # shaft rotated, adjust connection to spring\n",
     "    spring.axis = gyro.pos - top\n",
-    "    gyro.rotate(angle=omega*dt/4, axis=gyro.axis) # spin easier to see if slower than actual omega\n"
+    "    gyro.rotate(angle=omega*dt/4, axis=gyro.axis) # spin easier to see if slower than actual omega"
    ]
   },
   {
@@ -223,6 +211,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
