--- a/Demos/HardSphereGas.ipynb
+++ b/Demos/HardSphereGas.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -35,42 +36,6 @@
      "data": {
       "application/javascript": [
        "require.undef(\"nbextensions/glowcomm\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako_deflate.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako_inflate.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -161,12 +126,11 @@
     "dt = 1E-5\n",
     "\n",
     "animation = canvas( width=win, height=win)\n",
-    "animation.range = L\n",
     "\n",
     "d = L/2+Ratom\n",
     "r = 0.005\n",
     "boxbottom = curve(color=gray, radius=r)\n",
-    "boxbottom.append([vector(-d,-d,-d), vector(-d,-d,d), vector(d,-d,d), vector(d,-d,-d), vector(-d,-d,-d)])\n",
+    "boxbottom.append(pos=[vector(-d,-d,-d), vector(-d,-d,d), vector(d,-d,d), vector(d,-d,-d), vector(-d,-d,-d)])\n",
     "boxtop = curve(color=gray, radius=r)\n",
     "boxtop.append([vector(-d,d,-d), vector(-d,d,d), vector(d,d,d), vector(d,d,-d), vector(-d,d,-d)])\n",
     "vert1 = curve(color=gray, radius=r)\n",
@@ -189,7 +153,8 @@
     "    y = L*random()-L/2\n",
     "    z = L*random()-L/2\n",
     "    if i == 0:\n",
-    "        Atoms.append(sphere(pos=vector(x,y,z), radius=Ratom, color=color.cyan, make_trail=True, retain=100, trail_radius=0.3*Ratom))\n",
+    "        Atoms.append(sphere(pos=vector(x,y,z), radius=Ratom, color=color.cyan,\n",
+    "                            make_trail=True, retain=100, trail_radius=0.3*Ratom))\n",
     "    else: Atoms.append(sphere(pos=vector(x,y,z), radius=Ratom, color=gray))\n",
     "    apos.append(vector(x,y,z))\n",
     "    theta = pi*random()\n",
@@ -205,6 +170,7 @@
     "s += 'change the speeds of the colliding atoms. One of the atoms is\\n'\n",
     "s += 'marked and leaves a trail so you can follow its path.'\n",
     "animation.caption = s\n",
+    "animation.range = L\n",
     "\n",
     "deltav = 100 # binning for v histogram\n",
     "\n",
@@ -328,6 +294,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
