--- a/Demos/MousePicking.ipynb
+++ b/Demos/MousePicking.ipynb
@@ -116,7 +116,7 @@
     "        if lastpick != None: lasthit.modify(lastpick, color=lastcolor)\n",
     "        else: lasthit.color = vector(lastcolor)\n",
     "        lasthit = lastpick = None\n",
-    "    \n",
+    "        \n",
     "    hit = scene.mouse.pick\n",
     "    if hit != None:\n",
     "        lasthit = hit\n",
@@ -147,6 +147,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
