--- a/Demos/Stonehenge.ipynb
+++ b/Demos/Stonehenge.ipynb
@@ -22,7 +22,19 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1.min\");"
+       "require.undef(\"nbextensions/glow.2.1a.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/glow.2.1b.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -35,42 +47,6 @@
      "data": {
       "application/javascript": [
        "require.undef(\"nbextensions/glowcomm\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako_deflate.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako_inflate.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -125,9 +101,9 @@
     "# A surreal scene that illustrates many of the features of GlowScript\n",
     "\n",
     "# Add instructions below the display\n",
-    "s = \"<b>Fly through the scene:</b> With the mouse button down near the center of the canvas,<br><br>\"\n",
-    "s += \"    move the mouse or your finger above or below the center of the scene to move forward or backward;<br><br>\"\n",
-    "s += \"    move the mouse or your finger right or left to turn your direction of motion.<br><br>\"\n",
+    "s = \"<b>Fly through the scene:</b> With the mouse button down near the center of the canvas,<br>\"\n",
+    "s += \"    move the mouse or your finger above or below the center of the scene to move forward or backward;<br>\"\n",
+    "s += \"    move the mouse or your finger right or left to turn your direction of motion.<br>\"\n",
     "s += \"(Normal VPython rotate and zoom are turned off in this program.)\"\n",
     "scene.caption = s\n",
     "\n",
@@ -279,10 +255,12 @@
     "ballangle = 0.05*pi\n",
     "ball = []\n",
     "ball.append(sphere(pos=vector(0,0,0), size=2*rball*vector(1,1,1), color=color.blue))\n",
+    "\n",
     "for nn in range(4):\n",
     "    cc = cone(pos=vector(0,0,0)+vector(0.8*rball,0,0), axis=vector(3*rball,0,0), size=rball*vector(3,1,1), color=color.yellow)\n",
     "    cc.rotate(angle=0.5*nn*pi, axis=vector(0,1,0), origin=vector(0,0,0))\n",
     "    ball.append(cc)\n",
+    "sleep(0.5) # make sure the ball objects are fully updated before forming the compound\n",
     "ball = compound(ball)\n",
     "ball.pos = vector(0,y1,0)\n",
     "\n",
@@ -408,7 +386,7 @@
     "    spring.axis = mass.pos + vector(0, hmass / 2, 0) - spring.pos\n",
     "\n",
     "    # Update the analog clock on the back slab\n",
-    "    clock.update()\n"
+    "    clock.update()"
    ]
   },
   {
@@ -431,6 +409,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
