--- a/Demos/Plot3D.ipynb
+++ b/Demos/Plot3D.ipynb
@@ -22,7 +22,19 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1.min\");"
+       "require.undef(\"nbextensions/glow.2.1a.min\");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require.undef(\"nbextensions/glow.2.1b.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -35,42 +47,6 @@
      "data": {
       "application/javascript": [
        "require.undef(\"nbextensions/glowcomm\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako_deflate.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/pako_inflate.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -119,14 +95,13 @@
    "source": [
     "from vpython import *\n",
     "scene.width = scene.height = 600\n",
-    "scene.forward = vec(-0.7,-0.5,-1)\n",
     "# There is an L by L grid of vertex objects, numbered 0 through L-1 by 0 through L-1.\n",
     "# Only the vertex operators numbered L-2 by L-2 are used to create quads.\n",
     "# The extra row and extra column of vertex objects simplifies edge calculations.\n",
     "# The stride length from y = 0 to y = 1 is L.\n",
     "L = 25\n",
-    "scene.center = vec(0.05*L,0.2*L,0)\n",
     "scene.range = 1.3*L\n",
+    "scene.center = vec(0.05*L,0.2*L,0)\n",
     "## The next line contains LaTeX math notation. See http://www.glowscript.org/docs/VPythonDocs/MathJax.html\n",
     "#scene.caption = \"\"\"\\\\( f(x,y,t) = 0.7+0.2\\\\sin{(10x)}\\\\cos{(10y)}\\\\cos{(2t)} \\\\)\n",
     "scene.caption = \"\"\"<i>f</i>(<i>x,y,t</i>) = 0.7+0.2sin{(10<i>x</i>)cos{(10<i>y</i>)cos{(2<i>t</i>)\n",
@@ -194,7 +169,7 @@
     "                v1 = self.get_vertex(x+1,y)\n",
     "                v2 = self.get_vertex(x+1, y+1)\n",
     "                v3 = self.get_vertex(x, y+1)\n",
-    "                quad(vs=[v0, v1, v2, v3])\n",
+    "                quad(v0=v0, v1=v1, v2=v2, v3=v3)\n",
     "        \n",
     "    def make_normals(self):\n",
     "        # Set the normal for each vertex to be perpendicular to the lower left corner of the quad.\n",
@@ -232,7 +207,6 @@
     "    # Return the value of the function of x, y, and t:\n",
     "    return 0.7+0.2*sin(10*x)*cos(10*y)*sin(5*t)\n",
     "\n",
-    "\n",
     "p = plot3D(f, 0, 1, 0, 1, 0, 1) # function, xmin, xmax, ymin, ymax (defaults 0, 1, 0, 1, 0, 1)\n",
     "\n",
     "run = True\n",
@@ -241,6 +215,7 @@
     "    run = not run\n",
     "\n",
     "scene.bind('mousedown', running)\n",
+    "scene.forward = vec(-0.7,-0.5,-1)\n",
     "\n",
     "while True:\n",
     "    rate(30)\n",
@@ -260,6 +235,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
